--- a/index.html
+++ b/index.html
@@ -13,6 +13,30 @@
 </head>
 
 <body>
+  <div class="container">
+    <nav>
+      <img class="logo" src="images/logo.png" alt="">
+      <ul>
+        <li><a href="#">Travel Guide</a></li>
+        <li><a href="#">Famous Places</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+      <button class="BTN"><img src="images/icon.png" alt="">Bookings</button>
+    </nav>
+
+    <section class="content">
+      <h1>Beautiful <br> places to explore</h1>
+      <p>Ensuring that World Heritage sites sustain their outstanding universal <br> value is an increasingly
+        challenging
+        mission.</p>
+
+      <form>
+        <input type="text" id="text" placeholder="Country Name">
+        <button type="submit" class="BTN">Search</button>
+      </form>
+    </section>
+
+  </div>
 
 
 
